ffmpeg failed ... might need to add ffmpeg to environment

--- a/pipeline/download_data_notebook.ipynb
+++ b/pipeline/download_data_notebook.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded libraries sxi module: 0:00:01.115671\n",
+      "loaded libraries clean_img_02 module: 0:00:01.790741\n",
+      "loaded libraries download module w argonne file syst: 0:00:02.024894\n"
+     ]
+    }
+   ],
    "source": [
     "import sys  \n",
     "sys.path.insert(1, '..')\n",
@@ -35,6 +45,262 @@
     "from modules import convert_datetime\n",
     "import helio_reg_exp_module\n",
     "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/mnt/e/ALEXIS_data/flare_candidates/flarecandidate_C4.0_at_2011-02-08T21_11_00_08.working/first_hek_report.pickle']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_flare_list = glob(f'{dataconfig.DATA_DIR_FLARE_CANDIDATES}/*/first_hek_report.pickle')\n",
+    "start_flare_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_date</th>\n",
+       "      <th>peak_time</th>\n",
+       "      <th>goes_class</th>\n",
+       "      <th>AR_num</th>\n",
+       "      <th>hpc_x</th>\n",
+       "      <th>hpc_y</th>\n",
+       "      <th>hpc_bbox_poly</th>\n",
+       "      <th>id_team</th>\n",
+       "      <th>search_instrument</th>\n",
+       "      <th>HARPNUM</th>\n",
+       "      <th>final_cluster_label</th>\n",
+       "      <th>working_dir</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-02-08</td>\n",
+       "      <td>2011-02-08 21:12:00+00:00</td>\n",
+       "      <td>C4.0</td>\n",
+       "      <td>11153.0</td>\n",
+       "      <td>874.758000</td>\n",
+       "      <td>318.837000</td>\n",
+       "      <td>[[874.284, 311.7294], [879.786, 309.9726], [87...</td>\n",
+       "      <td>SWPC</td>\n",
+       "      <td>GOES</td>\n",
+       "      <td>[362]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/mnt/e/ALEXIS_data/flare_candidates/flarecandi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-02-08</td>\n",
+       "      <td>2011-02-08 21:09:00+00:00</td>\n",
+       "      <td>C4.0</td>\n",
+       "      <td>1153.0</td>\n",
+       "      <td>861.546000</td>\n",
+       "      <td>308.074800</td>\n",
+       "      <td>[[17.04258, 127.524], [17.04258, 127.524], [17...</td>\n",
+       "      <td>SolarSoft</td>\n",
+       "      <td>AIA</td>\n",
+       "      <td>[362]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/mnt/e/ALEXIS_data/flare_candidates/flarecandi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-02-08</td>\n",
+       "      <td>2011-02-08 21:12:16.525000192+00:00</td>\n",
+       "      <td>C8.57</td>\n",
+       "      <td>[11153]</td>\n",
+       "      <td>877.471077</td>\n",
+       "      <td>311.173261</td>\n",
+       "      <td>[[826.4710768447218, 260.1732609777037], [826....</td>\n",
+       "      <td>ALEXIS</td>\n",
+       "      <td>SDO-131-goes15-B</td>\n",
+       "      <td>[362]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>/mnt/e/ALEXIS_data/flare_candidates/flarecandi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   event_date                           peak_time goes_class   AR_num  \\\n",
+       "0  2011-02-08           2011-02-08 21:12:00+00:00       C4.0  11153.0   \n",
+       "1  2011-02-08           2011-02-08 21:09:00+00:00       C4.0   1153.0   \n",
+       "0  2011-02-08 2011-02-08 21:12:16.525000192+00:00      C8.57  [11153]   \n",
+       "\n",
+       "        hpc_x       hpc_y                                      hpc_bbox_poly  \\\n",
+       "0  874.758000  318.837000  [[874.284, 311.7294], [879.786, 309.9726], [87...   \n",
+       "1  861.546000  308.074800  [[17.04258, 127.524], [17.04258, 127.524], [17...   \n",
+       "0  877.471077  311.173261  [[826.4710768447218, 260.1732609777037], [826....   \n",
+       "\n",
+       "     id_team search_instrument HARPNUM  final_cluster_label  \\\n",
+       "0       SWPC              GOES   [362]                  NaN   \n",
+       "1  SolarSoft               AIA   [362]                  NaN   \n",
+       "0     ALEXIS  SDO-131-goes15-B   [362]                  0.0   \n",
+       "\n",
+       "                                         working_dir  \n",
+       "0  /mnt/e/ALEXIS_data/flare_candidates/flarecandi...  \n",
+       "1  /mnt/e/ALEXIS_data/flare_candidates/flarecandi...  \n",
+       "0  /mnt/e/ALEXIS_data/flare_candidates/flarecandi...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pickle.load(open(start_flare_list[0], 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lamda</th>\n",
+       "      <th>coeff</th>\n",
+       "      <th>img_wavelength</th>\n",
+       "      <th>img_telescope</th>\n",
+       "      <th>img_instrument</th>\n",
+       "      <th>xrs_instrument</th>\n",
+       "      <th>xrs_wavelength</th>\n",
+       "      <th>xrs_telescope</th>\n",
+       "      <th>zoom_in_type</th>\n",
+       "      <th>resampled_file</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HARPS_NOAA_AR_list</th>\n",
+       "      <th>HARPS_NOAA_NUM_list</th>\n",
+       "      <th>HARPS_obs_date_time_list</th>\n",
+       "      <th>HARPS_obs_time_stamp_list</th>\n",
+       "      <th>final_ALEXIS_entry</th>\n",
+       "      <th>final_ALEXIS_peaktime</th>\n",
+       "      <th>ALEXIS_vector_peak</th>\n",
+       "      <th>final_ALEXIS_value</th>\n",
+       "      <th>final_ALEXIS_goes_class</th>\n",
+       "      <th>final_fwd_bkg_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.001</td>\n",
+       "      <td>[0.8844624757408155]</td>\n",
+       "      <td>131</td>\n",
+       "      <td>SDO</td>\n",
+       "      <td>AIA</td>\n",
+       "      <td>XRS</td>\n",
+       "      <td>B</td>\n",
+       "      <td>goes15</td>\n",
+       "      <td>(100,)</td>\n",
+       "      <td>/mnt/e/ALEXIS_data/flare_candidates/flarecandi...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[11153]</td>\n",
+       "      <td>[1]</td>\n",
+       "      <td>[2011-02-08 21:11:19+00:00]</td>\n",
+       "      <td>[1297199479.0]</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2011-02-08 21:12:16.525000192+00:00</td>\n",
+       "      <td>2011-02-08 21:12:02+00:00</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>C8.57</td>\n",
+       "      <td>3m</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 69 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   lamda                 coeff  img_wavelength img_telescope img_instrument  \\\n",
+       "0  0.001  [0.8844624757408155]             131           SDO            AIA   \n",
+       "\n",
+       "  xrs_instrument xrs_wavelength xrs_telescope zoom_in_type  \\\n",
+       "0            XRS              B        goes15       (100,)   \n",
+       "\n",
+       "                                      resampled_file  ... HARPS_NOAA_AR_list  \\\n",
+       "0  /mnt/e/ALEXIS_data/flare_candidates/flarecandi...  ...            [11153]   \n",
+       "\n",
+       "  HARPS_NOAA_NUM_list     HARPS_obs_date_time_list HARPS_obs_time_stamp_list  \\\n",
+       "0                 [1]  [2011-02-08 21:11:19+00:00]            [1297199479.0]   \n",
+       "\n",
+       "  final_ALEXIS_entry               final_ALEXIS_peaktime  \\\n",
+       "0               True 2011-02-08 21:12:16.525000192+00:00   \n",
+       "\n",
+       "         ALEXIS_vector_peak  final_ALEXIS_value  final_ALEXIS_goes_class  \\\n",
+       "0 2011-02-08 21:12:02+00:00            0.000006                    C8.57   \n",
+       "\n",
+       "   final_fwd_bkg_time  \n",
+       "0                  3m  \n",
+       "\n",
+       "[1 rows x 69 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_list = glob(f'{dataconfig.DATA_DIR_FLARE_CANDIDATES}/*/defined_flares_w_harp_meta_and_goes_flare_class.pickle')\n",
+    "pickle.load(open(df_list[0], 'rb'))\n"
    ]
   },
   {
