notebook that shows SXI webscraper and sxi_availibility.db query

--- a/jupyter_notebooks/create_sxi_avail.ipynb
+++ b/jupyter_notebooks/create_sxi_avail.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded libraries sxi module: 0:00:00.919883\n",
+      "loaded libraries sxi module: 0:00:00.000024\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import sys \n",
@@ -537,6 +546,241 @@
    "source": [
     "os.path.exists(f'{WORKING_DIR}/{this_df.iloc[0].file_name}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010-05-01 12:00:00+00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>download_string</th>\n",
+       "      <th>time_stamp</th>\n",
+       "      <th>url</th>\n",
+       "      <th>data_level</th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>instrument</th>\n",
+       "      <th>date_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272713e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_112015165_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 11:20:15.164999936+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272713e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_112115163_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 11:21:15.163000064+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272713e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_112215166_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 11:22:15.166000128+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272713e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_112315157_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 11:23:15.156999936+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272713e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_112400165_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 11:24:00.164999936+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272717e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_123615146_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 12:36:15.145999872+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272717e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_123700162_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 12:37:00.161999872+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272717e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_123715167_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 12:37:15.167000064+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272717e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_123815143_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 12:38:15.143000064+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>wget -e robots=off --recursive --no-parent glo...</td>\n",
+       "      <td>1.272718e+09</td>\n",
+       "      <td>https://www.ncei.noaa.gov/data/goes-solar-xray...</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>SXI_20100501_123915141_AA_14.FTS</td>\n",
+       "      <td>goes14</td>\n",
+       "      <td>2010-05-01 12:39:15.140999936+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      download_string    time_stamp  \\\n",
+       "0   wget -e robots=off --recursive --no-parent glo...  1.272713e+09   \n",
+       "1   wget -e robots=off --recursive --no-parent glo...  1.272713e+09   \n",
+       "2   wget -e robots=off --recursive --no-parent glo...  1.272713e+09   \n",
+       "3   wget -e robots=off --recursive --no-parent glo...  1.272713e+09   \n",
+       "4   wget -e robots=off --recursive --no-parent glo...  1.272713e+09   \n",
+       "..                                                ...           ...   \n",
+       "95  wget -e robots=off --recursive --no-parent glo...  1.272717e+09   \n",
+       "96  wget -e robots=off --recursive --no-parent glo...  1.272717e+09   \n",
+       "97  wget -e robots=off --recursive --no-parent glo...  1.272717e+09   \n",
+       "98  wget -e robots=off --recursive --no-parent glo...  1.272717e+09   \n",
+       "99  wget -e robots=off --recursive --no-parent glo...  1.272718e+09   \n",
+       "\n",
+       "                                                  url data_level  \\\n",
+       "0   https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "1   https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "2   https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "3   https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "4   https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "..                                                ...        ...   \n",
+       "95  https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "96  https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "97  https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "98  https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "99  https://www.ncei.noaa.gov/data/goes-solar-xray...         AA   \n",
+       "\n",
+       "                           file_name instrument  \\\n",
+       "0   SXI_20100501_112015165_AA_14.FTS     goes14   \n",
+       "1   SXI_20100501_112115163_AA_14.FTS     goes14   \n",
+       "2   SXI_20100501_112215166_AA_14.FTS     goes14   \n",
+       "3   SXI_20100501_112315157_AA_14.FTS     goes14   \n",
+       "4   SXI_20100501_112400165_AA_14.FTS     goes14   \n",
+       "..                               ...        ...   \n",
+       "95  SXI_20100501_123615146_AA_14.FTS     goes14   \n",
+       "96  SXI_20100501_123700162_AA_14.FTS     goes14   \n",
+       "97  SXI_20100501_123715167_AA_14.FTS     goes14   \n",
+       "98  SXI_20100501_123815143_AA_14.FTS     goes14   \n",
+       "99  SXI_20100501_123915141_AA_14.FTS     goes14   \n",
+       "\n",
+       "                             date_time  \n",
+       "0  2010-05-01 11:20:15.164999936+00:00  \n",
+       "1  2010-05-01 11:21:15.163000064+00:00  \n",
+       "2  2010-05-01 11:22:15.166000128+00:00  \n",
+       "3  2010-05-01 11:23:15.156999936+00:00  \n",
+       "4  2010-05-01 11:24:00.164999936+00:00  \n",
+       "..                                 ...  \n",
+       "95 2010-05-01 12:36:15.145999872+00:00  \n",
+       "96 2010-05-01 12:37:00.161999872+00:00  \n",
+       "97 2010-05-01 12:37:15.167000064+00:00  \n",
+       "98 2010-05-01 12:38:15.143000064+00:00  \n",
+       "99 2010-05-01 12:39:15.140999936+00:00  \n",
+       "\n",
+       "[100 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ruffus has run on a test set of dates. we can query sxi_availability.db\n",
+    "\n",
+    "the_datetime = pd.Timestamp('2010-05-01T12:00:00', tz = 'utc')\n",
+    "print(the_datetime)\n",
+    "\n",
+    "query_the_data.sxi_availability_sql_db(input_datetime = the_datetime, query_time = 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
