notebook needs to run after hek db in order to create SS_and_SWPC_hek_flares.pickle

--- a/jupyter_notebooks/zerocross_analysis.ipynb
+++ b/jupyter_notebooks/zerocross_analysis.ipynb
@@ -1775,7 +1775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pickle.dump(masked_by_time, open(f'{dataconfig.DATA_DIR_PRODUCTS}/SS_and_SWPC_hek_flares.pickle', 'wb'))"
+    "pickle.dump(masked_by_time, open(f'{dataconfig.DATA_DIR_PRODUCTS}/SS_and_SWPC_hek_flares.pickle', 'wb'))"
    ]
   },
   {
@@ -3032,53 +3032,6 @@
     "    ax.text(bar.get_width(), bar.get_y(), s = bar.get_width(), va = 'center')\n",
     "\n",
     "ax.set_xscale('log')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "596"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "904-308"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "641"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "595+25+1+19+1"
    ]
   },
   {
